QuickLintPlugin: Guard against deceptive default properties

If the default property has been overridden, we cannot say anything
about the children anymore.

Fixes: QTBUG-132805
Change-Id: I4d8990b43801976a86b1416f70ee517cda57bda9
Reviewed-by: Olivier De Cannière <olivier.decanniere@qt.io>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit 4ae701226edbf17abb7a758e7fd3f97b6dd7a894)
(cherry picked from commit 3dec3fc104bf1db587b1eaac6dc95b3dbe5e80d1)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 4a4299c4f9823d9b530ddff995aa4e2f0d5de469)